**Step 10: Write and run MessagingFactoryTest**